CSS fixes and OAUTH moves

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html ng-app="template">
   <head>
     <meta charset="utf-8">
-    <title>template</title>
+    <title>MapIt</title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
+    <base href="/">
 <!--     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/three-quarters.css" type="text/css"> -->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 
